--- a/src/app/views/order/add.phtml
+++ b/src/app/views/order/add.phtml
@@ -30,4 +30,4 @@ echo $this->tag->submitButton(["Place Order", 'class'=>"btn btn-primary mt-3"]);
 ?>
 </form>
 </div>
-<div class="alert alert-danger"><?php if (isset($message)) echo $message; ?></div>
+<div class="alert alert-danger w-50 m-auto mt-2"><?php if (isset($message)) echo $message; ?></div>
