--- a/src/app/views/product/add.phtml
+++ b/src/app/views/product/add.phtml
@@ -21,4 +21,4 @@ echo $this->tag->textField(["stock", 'class'=>"form-control"]);
 echo $this->tag->submitButton(["Add Product", 'class'=>"btn btn-primary mt-3"]);
 ?>
 </div>
-<div class="alert alert-danger"><?php if (isset($message)) echo $message; ?></div>
+<div class="alert alert-danger w-50 m-auto mt-2"><?php if (isset($message)) echo $message; ?></div>
