--- a/src/app/views/setting/index.phtml
+++ b/src/app/views/setting/index.phtml
@@ -22,4 +22,4 @@ echo $this->tag->textField(["zipcode", 'class'=>"form-control", 'value'=>$settin
 echo $this->tag->submitButton(["Update", 'class'=>"btn btn-primary mt-3"]);
 ?>
 </div>
-<div class="alert alert-danger"><?php if (isset($message)) echo $message; ?></div>
+<div class="alert alert-danger w-50 m-auto mt-2"><?php if (isset($message)) echo $message; ?></div>
